feat(shardingsphere): 目录调整